traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:12: error: variable direction in class AbstractBuggle cannot be accessed in plm.runtime4.TraversalByColumn
  return (estFaceMur && estDroiteMur && getDirection==direction.SOUTH)
                                                      ^